# TCPclient-server

./: CMakeLists.txt  README.md
client/: client.c
server/: server.c
